--- a/package.json
+++ b/package.json
@@ -52,36 +52,36 @@
   "homepage": "https://github.com/electron-userland/electron-builder",
   "dependencies": {
     "7zip-bin": "^2.2.7",
+    "app-package-builder": "1.3.1",
+    "asar-integrity": "0.2.3",
     "async-exit-hook": "^2.0.1",
     "bluebird-lst": "^1.0.5",
+    "builder-util": "3.0.13",
+    "builder-util-runtime": "2.4.0",
     "chalk": "2.1.0",
     "chromium-pickle-js": "^0.2.0",
     "cuint": "^0.2.2",
-    "app-package-builder": "0.0.0-semantic-release",
-    "builder-util-runtime": "0.0.0-semantic-release",
-    "builder-util": "0.0.0-semantic-release",
+    "debug": "^3.1.0",
+    "dmg-builder": "2.1.3",
+    "ejs": "^2.5.7",
     "electron-download-tf": "4.3.4",
     "electron-osx-sign": "0.4.7",
-    "electron-publish": "0.0.0-semantic-release",
+    "electron-publish": "19.40.0",
     "fs-extra-p": "^4.4.4",
     "hosted-git-info": "^2.5.0",
     "is-ci": "^1.0.10",
     "isbinaryfile": "^3.0.2",
     "js-yaml": "^3.10.0",
-    "read-config-file": "1.2.0",
+    "lazy-val": "^1.0.2",
     "minimatch": "^3.0.4",
     "normalize-package-data": "^2.4.0",
     "plist": "^2.1.0",
+    "read-config-file": "1.2.0",
     "sanitize-filename": "^1.6.1",
     "semver": "^5.4.1",
-    "update-notifier": "^2.3.0",
-    "yargs": "^10.0.3",
-    "debug": "^3.1.0",
-    "asar-integrity": "0.0.0-semantic-release",
-    "lazy-val": "^1.0.2",
     "temp-file": "^2.0.3",
-    "ejs": "^2.5.7",
-    "dmg-builder": "0.0.0-semantic-release"
+    "update-notifier": "^2.3.0",
+    "yargs": "^10.0.3"
   },
   "typings": "./out/index.d.ts",
   "publishConfig": {
